--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -569,43 +569,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def algoritmo (array):\n",
-    "    a=0\n",
-    "    b=array[0]\n",
-    "    for elem in array[1:]:\n",
-    "        n=max(a+elem,b)\n",
-    "        a=b\n",
-    "        b=n\n",
-    "    return b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "array=[3,4,5,60,4]\n",
-    "algoritmo(array)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -624,18 +587,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[50, 90, 35, 25]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'caso_limite' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/xr/79bkvytj5kd5th_p5bnz8bhh0000gn/T/ipykernel_65786/733369429.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecursive_algo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mrecursive_algo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mrecursive_algo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcaso_limite\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'caso_limite' is not defined"
+     ]
     }
    ],
    "source": [
@@ -645,88 +609,71 @@
     "\n",
     "    return(max(recursive_algo(arr[1:]), [arr[0]] + recursive_algo(arr[2:]), key=sum))\n",
     "\n",
-    "recursive_algo(caso_limite)"
+    "#recursive_algo(caso_limite)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "65 massimo fra 65 50 : n= 65 a= 0 b= 50\n",
-      "90 massimo fra 140 65 : n= 140 a= 50 b= 65\n",
-      "60 massimo fra 125 140 : n= 140 a= 65 b= 140\n",
-      "35 massimo fra 175 140 : n= 175 a= 140 b= 140\n",
-      "10 massimo fra 150 175 : n= 175 a= 140 b= 175\n",
-      "15 massimo fra 190 175 : n= 190 a= 175 b= 175\n",
-      "25 massimo fra 200 190 : n= 200 a= 175 b= 190\n",
-      "[50, 65, 90, 35, 15, 25]\n"
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (3675062657.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/xr/79bkvytj5kd5th_p5bnz8bhh0000gn/T/ipykernel_67593/3675062657.py\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    '''\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
    "source": [
-    "def algoritmo_leo(array):\n",
-    "    a=0\n",
-    "    b=array[0]\n",
-    "    step=[array[0]]\n",
-    "    for elem in array[1:]:\n",
-    "        n=max(a+elem,b)\n",
-    "        if a+elem>b:\n",
-    "            step.append(elem)\n",
-    "        print(elem,'massimo fra',a+elem,b,': n=',n,'a=',a,'b=',b)\n",
-    "        a=b\n",
-    "        b=n\n",
-    "    return b,step\n",
-    "\n",
-    "print(algoritmo_leo(caso_limite)[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "'''\n",
     "step=[50, 65, 90, 35, 15, 25, 35]\n",
     "original=[50, 65, 90, 35, 15, 25, 35]\n",
     "\n",
-    "def algoritmo_leo(array):\n",
+    "def find_max_sum(array):\n",
+    "    '''\n",
+    "    #find the max sum of elements that are not consecutive\n",
+    "    '''\n",
     "    a=0\n",
     "    b=array[0]\n",
     "    step=[array[0]]\n",
+    "    index=0\n",
     "    for elem in array[1:]:\n",
     "        n=max(a+elem,b)\n",
     "        if a+elem>b:\n",
     "            step.append(elem)\n",
-    "        print(elem,'massimo fra',a+elem,b,': n=',n,'a=',a,'b=',b)\n",
+    "        #print(elem,'massimo fra',a+elem,b,': n=',n,'a=',a,'b=',b)\n",
+    "        index+=1\n",
     "        a=b\n",
     "        b=n\n",
     "    return b,step\n",
     "\n",
-    "def filtra_ris(step,original):\n",
+    "def eliminate_consecutive(step,original):\n",
+    "    '''\n",
+    "   # eliminate the element from step which are consecutive in the original array\n",
+    "    '''\n",
+    "    \n",
     "    step.reverse()\n",
     "    #print(step)\n",
-    "    print('step',step)\n",
-    "\n",
-    "\n",
+    "    #print('step',step)\n",
+    "    \n",
     "    ultimo=step[-1]\n",
     "    i=0\n",
     "    condizione=len(step)\n",
+    "\n",
+    "\n",
     "    while i<condizione:\n",
     "        print('while number',i,'step',step)\n",
     "        j=0\n",
     "        while (step[i]!=original[j]):\n",
     "            j+=1\n",
-    "        if (step[i]==original[j]):\n",
-    "            if (step[i+1]==original[j-1] and step[i]!=ultimo):\n",
-    "                step.remove(step[i+1])\n",
-    "                print(step)\n",
-    "            elif(step[i]==ultimo and step[i-1]==original[j+1] ):\n",
-    "                step.remove(step[i-1])\n",
+    "        \n",
+    "        if ( step[i+1]==original[j-1] ):#step[i]!=ultimo and\n",
+    "            step.remove(step[i+1])\n",
+    "            print(step)\n",
+    "        elif(step[i]==ultimo and step[i-1]==original[j+1] ):\n",
+    "            step.remove(step[i-1])\n",
     "            \n",
     "\n",
     "        condizione=len(step)\n",
@@ -734,11 +681,147 @@
     "        i+=1\n",
     "    step.reverse() \n",
     "    return step\n",
+    "    \n",
     "\n",
     "\n",
     "def solution(array):\n",
-    "    b,step=algoritmo_leo(array)\n",
-    "    risultato=filtra_ris(step,array)"
+    "    b,step=find_max_sum(array)\n",
+    "    risultato=eliminate_consecutive(step,array)\n",
+    "    return risultato\n",
+    "''';"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "while number 0 step [5, 5, 5, 9, 5]\n",
+      "[5, 5, 9, 5]\n",
+      "step [5, 5, 9, 5]\n",
+      "while number 1 step [5, 5, 9, 5]\n",
+      "step [5, 5, 9, 5]\n",
+      "while number 2 step [5, 5, 9, 5]\n",
+      "[5, 9, 5]\n",
+      "step [5, 9, 5]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[5, 9, 5]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_max_sum_d(array):\n",
+    "    '''\n",
+    "    find the max sum of elements that are not consecutive\n",
+    "    '''\n",
+    "    a=0\n",
+    "    b=array[0]\n",
+    "    original=[(array[0],0)]\n",
+    "    step=[(array[0],0)]\n",
+    "    index=1\n",
+    "    for elem in array[1:]:\n",
+    "        original.append((elem,index))\n",
+    "        n=max(a+elem,b)\n",
+    "        if a+elem>b:\n",
+    "            step.append((elem,index))\n",
+    "        #print(elem,'massimo fra',a+elem,b,': n=',n,'a=',a,'b=',b)\n",
+    "        index+=1\n",
+    "        a=b\n",
+    "        b=n\n",
+    "    \n",
+    "    return b,step,original\n",
+    "\n",
+    "def eliminate_consecutive_d(step,original):\n",
+    "    '''\n",
+    "    eliminate the element from step which are consecutive in the original array\n",
+    "    '''\n",
+    "    i=0\n",
+    "    condizione=len(step)\n",
+    "\n",
+    "    \n",
+    "    while -i<condizione:\n",
+    "        for j in range(len(original)):\n",
+    "\n",
+    "            if (step[i-1][1]!=0 and step[-i-1][0]==original[j][0]):\n",
+    "                if(step[i-1]==original[j]):\n",
+    "                    if (step[i-2]==original[j-1]):\n",
+    "                        step.pop(i-2)\n",
+    "\n",
+    "            #caso limite per primo elemento\n",
+    "            if(step[i-1][1]==0 and step[0]==original[0] ):\n",
+    "                if (step[1]==original[1]):\n",
+    "                    step.pop(1)\n",
+    "                    #esco per non dare problemi con indice\n",
+    "                    step=[x[0] for x in step]\n",
+    "                    return step\n",
+    "\n",
+    "        condizione=len(step)\n",
+    "        i-=1\n",
+    "        \n",
+    "    step=[x[0] for x in step]\n",
+    "    return step\n",
+    "    \n",
+    "\n",
+    "def solutione(array):\n",
+    "    b,step,original=find_max_sum_d(array)\n",
+    "    step=eliminate_consecutive_d(step,original)\n",
+    "    return step\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[500, 5, 50]"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solutione([65,500,9,5,9,50])"
    ]
   },
   {
