Renamed total_pages in 0total_pages to have it on top of the directory, changed line 1592 for an error

--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -458,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,6 +786,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "def import_df(path = \"../shared_stuff/tsv_files/0total_pages.tsv\"):\n",
+    "    return pd.read_table(path,\n",
+    "                        delimiter = \"\\t\",\n",
+    "                        header = \"infer\",quoting=csv.QUOTE_NONE, error_bad_lines=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-55-5d990757dcc6>:1: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version.\n",
+      "\n",
+      "\n",
+      "  df = import_df()\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = import_df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 19122 entries, 0 to 19121\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column         Non-Null Count  Dtype \n",
+      "---  ------         --------------  ----- \n",
+      " 0   title          19122 non-null  object\n",
+      " 1   type           19122 non-null  object\n",
+      " 2   episodes       19122 non-null  object\n",
+      " 3   start_date     19122 non-null  object\n",
+      " 4   end_date       19122 non-null  object\n",
+      " 5   score          19122 non-null  object\n",
+      " 6   users          19122 non-null  object\n",
+      " 7   ranked         19122 non-null  object\n",
+      " 8   popularity     19122 non-null  int64 \n",
+      " 9   members        19122 non-null  int64 \n",
+      " 10  synopsis       19122 non-null  object\n",
+      " 11  related_anime  19122 non-null  object\n",
+      " 12  characters     19122 non-null  object\n",
+      " 13  voices         19122 non-null  object\n",
+      " 14  staff          19122 non-null  object\n",
+      "dtypes: int64(2), object(13)\n",
+      "memory usage: 2.2+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [
@@ -827,41 +905,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import ast\n",
-    "df = df[df.isna().sum(axis=1)==0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        [cook, justin, produc, yonai, noritomo, produc...\n",
-       "1        [fujita, youichi, director, storyboard, plan, ...\n",
-       "2        [yabuta, shuuhei, produc, wada, jouji, produc,...\n",
-       "3        [iwasa, gaku, produc, yasuda, takeshi, produc,...\n",
-       "4        [ibata, yoshihid, director, aketagawa, jin, so...\n",
-       "                               ...                        \n",
-       "19112                                                   []\n",
-       "19113                          [ochiai, masamun, director]\n",
-       "19114                               [raika, ken, director]\n",
-       "19115                                                   []\n",
-       "19116    [araki, hideki, director, ateli, kaguya, origi...\n",
-       "Length: 19115, dtype: object"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "def preprocessing_staff(df):\n",
     "    string_staff = df.apply(lambda row: ' '.join([el[0] for el in ast.literal_eval(row['staff'])]), \n",
@@ -870,29 +916,21 @@
     "    prepr_staff = df.apply(lambda row: (preprocess(row['staff'], SnowballStemmer('english'))), axis = 'columns')\n",
     "    return prepr_staff\n",
     "\n",
-    "preprocessing_staff(df)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "string_staff = df.apply(lambda row: ' '.join([el[0] for el in ast.literal_eval(row['staff'])]), \n",
-    "                                axis = 'columns')\n",
-    "prepr_staff = df.apply(lambda row: (preprocess(row['staff'], SnowballStemmer('english'))), axis = 'columns')\n",
+    "def preprocessing_voices(df):\n",
+    "    string_voices = df.apply(lambda row: ' '.join(ast.literal_eval(row['voices'])), \n",
+    "                                    axis = 'columns')\n",
+    "    print(f\"Converted all the lists in strings, starting the preprocessing...\")\n",
+    "    prepr_voices = df.apply(lambda row: (preprocess(row['voices'], SnowballStemmer('english'))), axis = 'columns')\n",
     "\n",
-    "string_voices = df.apply(lambda row: ' '.join(ast.literal_eval(row['voices'])), \n",
-    "                                axis = 'columns')\n",
-    "prepr_voices = df.apply(lambda row: (preprocess(row['voices'], SnowballStemmer('english'))), axis = 'columns')\n",
+    "def preprocessing_characters(df):\n",
+    "    string_characters = df.apply(lambda row: ' '.join(ast.literal_eval(row['characters'])), \n",
+    "                                    axis = 'columns')\n",
+    "    print(f\"Converted all the lists in strings, starting the preprocessing...\")\n",
+    "    prepr_characters = df.apply(lambda row: (preprocess(row['characters'], SnowballStemmer('english'))), axis = 'columns')\n",
     "\n",
-    "string_characters = df.apply(lambda row: ' '.join(ast.literal_eval(row['characters'])), \n",
-    "                                axis = 'columns')\n",
-    "prepr_characters = df.apply(lambda row: (preprocess(row['characters'], SnowballStemmer('english'))), axis = 'columns')\n",
-    "\n",
-    "prepr_title = df.apply(lambda row: (preprocess(row['title'], SnowballStemmer('english'))), axis = 'columns')\n",
-    "                                \n"
+    "def preprocessing_title(df):\n",
+    "    print(f\"Starting the preprocessing...\")\n",
+    "    prepr_title = df.apply(lambda row: (preprocess(row['title'], SnowballStemmer('english'))), axis = 'columns')"
    ]
   },
   {
@@ -914,6 +952,26 @@
    "outputs": [],
    "source": [
     "idx_title = create_inv_idx(prepr_title, voc_title)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "8+8"
    ]
   },
   {
@@ -1261,33 +1319,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                         Fullmetal Alchemist: Brotherhood\n",
-       "1                              Gintama° (Gintama Season 4)\n",
-       "2                       Shingeki no Kyojin Season 3 Part 2\n",
-       "3                                              Steins;Gate\n",
-       "4                                 Fruits Basket: The Final\n",
-       "                               ...                        \n",
-       "19118                                     Konbini Shoujo Z\n",
-       "19119                                     Korogashi Ryouta\n",
-       "19120                             Kyonyuu Elf Oyako Saimin\n",
-       "19121                   Mahou Shoujo Elena DVD-BOX Special\n",
-       "19122    Mama x Holic: Miwaku no Mama to Amaama Kankei ...\n",
-       "Name: title, Length: 19123, dtype: object"
+       "<bound method NDFrame.keys of                                                    title     type episodes  \\\n",
+       "0                       Fullmetal Alchemist: Brotherhood       TV       64   \n",
+       "1                            Gintama° (Gintama Season 4)       TV       51   \n",
+       "2                     Shingeki no Kyojin Season 3 Part 2       TV       10   \n",
+       "3                                            Steins;Gate       TV       24   \n",
+       "4                               Fruits Basket: The Final       TV       13   \n",
+       "...                                                  ...      ...      ...   \n",
+       "19118                                   Konbini Shoujo Z      OVA     None   \n",
+       "19119                                   Korogashi Ryouta      OVA        3   \n",
+       "19120                           Kyonyuu Elf Oyako Saimin      OVA        2   \n",
+       "19121                 Mahou Shoujo Elena DVD-BOX Special  Special        1   \n",
+       "19122  Mama x Holic: Miwaku no Mama to Amaama Kankei ...      OVA        2   \n",
+       "\n",
+       "                start_date             end_date score    users ranked  \\\n",
+       "0      2009-04-05 00:00:00  2010-07-04 00:00:00  9.16  1622384      1   \n",
+       "1      2015-04-08 00:00:00  2016-03-30 00:00:00  9.09   169476      2   \n",
+       "2      2019-04-29 00:00:00  2019-07-01 00:00:00  9.09  1087519      3   \n",
+       "3      2011-04-06 00:00:00  2011-09-14 00:00:00  9.09  1109700      4   \n",
+       "4      2021-04-06 00:00:00  2021-06-29 00:00:00  9.07   113310      5   \n",
+       "...                    ...                  ...   ...      ...    ...   \n",
+       "19118                 None                 None  None     None   None   \n",
+       "19119  1990-11-21 00:00:00  1991-11-21 00:00:00  None     None   None   \n",
+       "19120  2022-01-28 00:00:00                 None  None     None   None   \n",
+       "19121  2015-12-11 00:00:00                 None  None     None   None   \n",
+       "19122  2021-11-26 00:00:00                 None  None     None   None   \n",
+       "\n",
+       "       popularity    members  \\\n",
+       "0             3.0  2675906.0   \n",
+       "1           337.0   483844.0   \n",
+       "2            33.0  1596193.0   \n",
+       "3            11.0  2091019.0   \n",
+       "4           651.0   275261.0   \n",
+       "...           ...        ...   \n",
+       "19118     12776.0      560.0   \n",
+       "19119     14511.0      309.0   \n",
+       "19120     16931.0      151.0   \n",
+       "19121     14501.0      330.0   \n",
+       "19122     11074.0     1025.0   \n",
+       "\n",
+       "                                                synopsis  \\\n",
+       "0      After a horrific alchemy experiment goes wrong...   \n",
+       "1      Gintoki, Shinpachi, and Kagura return as the f...   \n",
+       "2      Seeking to restore humanity's diminishing hope...   \n",
+       "3      The self-proclaimed mad scientist Rintarou Oka...   \n",
+       "4      Hundreds of years ago, the Chinese Zodiac spir...   \n",
+       "...                                                  ...   \n",
+       "19118  No synopsis information has been added to this...   \n",
+       "19119  Takao Ryota is a pervy but well-meaning biker-...   \n",
+       "19120  No synopsis information has been added to this...   \n",
+       "19121          Short special included in the DVD-BOX of    \n",
+       "19122  No synopsis information has been added to this...   \n",
+       "\n",
+       "                                           related_anime  \\\n",
+       "0      ['Fullmetal Alchemist: Brotherhood - 4-Koma Th...   \n",
+       "1      ['Gintama°: Umai-mono wa Atomawashi ni Suru to...   \n",
+       "2      ['Shingeki no Kyojin: Chronicle', 'Shingeki no...   \n",
+       "3      ['Steins;Gate: Kyoukaimenjou no Missing Link -...   \n",
+       "4      ['Fruits Basket', 'Fruits Basket: Prelude', 'F...   \n",
+       "...                                                  ...   \n",
+       "19118                                               None   \n",
+       "19119                               ['Korogashi Ryouta']   \n",
+       "19120                                               None   \n",
+       "19121                             ['Mahou Shoujo Elena']   \n",
+       "19122  ['Love x Holic: Miwaku no Otome to Hakudaku Ka...   \n",
+       "\n",
+       "                                              characters  \\\n",
+       "0      ['Elric, Edward', 'Elric, Alphonse', 'Mustang,...   \n",
+       "1      ['Sakata, Gintoki', 'Kagura', 'Shimura, Shinpa...   \n",
+       "2      ['Levi', 'Yeager, Eren', 'Ackerman, Mikasa', '...   \n",
+       "3      ['Okabe, Rintarou', 'Makise, Kurisu', 'Shiina,...   \n",
+       "4      ['Souma, Kyou', 'Honda, Tooru', 'Souma, Yuki',...   \n",
+       "...                                                  ...   \n",
+       "19118                                                 []   \n",
+       "19119                                                 []   \n",
+       "19120          ['Agraliel, Ephildis', 'Agraliel, Almia']   \n",
+       "19121                                                 []   \n",
+       "19122                                                 []   \n",
+       "\n",
+       "                                                  voices  \\\n",
+       "0      ['Park, Romi', 'Kugimiya, Rie', 'Miki, Shinich...   \n",
+       "1      ['Sugita, Tomokazu', 'Kugimiya, Rie', 'Sakaguc...   \n",
+       "2      ['Kamiya, Hiroshi', 'Kaji, Yuki', 'Ishikawa, Y...   \n",
+       "3      ['Miyano, Mamoru', 'Imai, Asami', 'Hanazawa, K...   \n",
+       "4      ['Uchida, Yuuma', 'Iwami, Manaka', 'Shimazaki,...   \n",
+       "...                                                  ...   \n",
+       "19118                                                 []   \n",
+       "19119                                                 []   \n",
+       "19120                                                 []   \n",
+       "19121                                                 []   \n",
+       "19122                                                 []   \n",
+       "\n",
+       "                                                   staff  \n",
+       "0      [['Cook, Justin', ['Producer']], ['Yonai, Nori...  \n",
+       "1      [['Fujita, Youichi', ['Director', ' Storyboard...  \n",
+       "2      [['Yabuta, Shuuhei', ['Producer']], ['Wada, Jo...  \n",
+       "3      [['Iwasa, Gaku', ['Producer']], ['Yasuda, Take...  \n",
+       "4      [['Ibata, Yoshihide', ['Director']], ['Aketaga...  \n",
+       "...                                                  ...  \n",
+       "19118                                                 []  \n",
+       "19119               [['Ochiai, Masamune', ['Director']]]  \n",
+       "19120                     [['Raika, Ken', ['Director']]]  \n",
+       "19121                                                 []  \n",
+       "19122  [['Araki, Hideki', ['Director']], ['Atelier Ka...  \n",
+       "\n",
+       "[19123 rows x 15 columns]>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_dirty['title']"
+    "df_dirty.keys"
    ]
   },
   {
