Fixed some functions

--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -25,11 +25,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -562,16 +557,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse_query(query, vocab):\n",
+    "def parse_query(query, vocab, stemmer):\n",
     "    \"\"\"\n",
     "    This functions converts the list of words\n",
     "    input by the user into the list of the IDs\n",
     "    the words are saved as in the vocabulary\n",
     "    \n",
     "    Arguments\n",
-    "        query : list of words\n",
-    "        vocab : vocabulary of words with the words as keys\n",
-    "                and their IDs as values\n",
+    "        query   : list of words\n",
+    "        vocab   : vocabulary of words with the words as keys\n",
+    "                  and their IDs as values\n",
+    "        stemmer : stemmer object, e.g. SnowBallStemmer()\n",
+    "        \n",
     "    Returns\n",
     "        list of the IDs of the words in the query\n",
     "    \"\"\"\n",
@@ -587,7 +584,7 @@
     "    return parsed_query\n",
     "\n",
     "\n",
-    "def get_results(query):\n",
+    "def get_results(query, inv_dx):\n",
     "    \"\"\"\n",
     "    This functions finds the documents all the words\n",
     "    in the query are in.\n",
@@ -598,7 +595,8 @@
     "    3. intersects all those sets into a single set\n",
     "       \n",
     "    Arguments\n",
-    "        query : list of words as parsed by 'parse_query'\n",
+    "        query   : list of words as parsed by 'parse_query'\n",
+    "        inv_idx : (dictionary) inverted index\n",
     "        \n",
     "    Returns\n",
     "        set with the documents that contain all the words in the query\n",
@@ -608,7 +606,8 @@
     "\n",
     "\n",
     "def get_df_entries(df, results,\n",
-    "                   url_file = \"../shared_stuff/url_list.txt\", simil = None):\n",
+    "                   url_file = \"../shared_stuff/url_list.txt\", \n",
+    "                   simil = None):\n",
     "    \"\"\"\n",
     "    This function filters the dataset so it only shows\n",
     "    the rows which match the results, and adds a new column\n",
@@ -618,6 +617,7 @@
     "        df       : pandas dataframe\n",
     "        results  : set with the row indices to be filtered out\n",
     "        url_file : external file with the URLs for each of the rows in df\n",
+    "        simil    : dictionary with the similarity scores\n",
     "    \n",
     "    Returns\n",
     "        df : filtered pandas dataframe\n",
@@ -639,7 +639,8 @@
     "    \n",
     "    if simil is not None: #in case we need a colum for similiaty\n",
     "        df[\"Similarity\"] = itemgetter(*results)(simil)\n",
-    "        df = df.sort_values(by=['Similarity'], ascending=False)\n",
+    "        df = df.sort_values(by=['Similarity'], ascending = False)\n",
+    "\n",
     "    return df"
    ]
   },
@@ -1041,13 +1042,13 @@
     }
    ],
    "source": [
-    "query = parse_query(input().split(), vocab)\n",
+    "query = parse_query(input().split(), vocab, stemmer)\n",
     "\n",
     "# if at least one word in the query\n",
     "# is in the vocabulary\n",
     "if query:\n",
     "    \n",
-    "    results = get_results(query)\n",
+    "    results = get_results(query, inv_idx)\n",
     "\n",
     "    df_entries = get_df_entries(df, results)\n",
     "\n",
@@ -1105,7 +1106,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# bozza\n",
     "import numpy as np\n",
     "\n",
     "def create_inv_idx(corpus, vocab):\n",
@@ -1472,7 +1472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
