--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -1362,7 +1362,7 @@
    "source": [
     "import heapq\n",
     "k = 10 #let's k be 10\n",
-    "query = parse_query(input().split(), vocab)\n",
+    "query = parse_query(input().split(), vocab, stemmer)\n",
     "if query:\n",
     "    tfidf_q, tfidf_docs = tfidf_query(df['synopsis_clean'], query, inv_idx, idf)\n",
     "    #definig heap to finding k docs with largest cos similiarity\n",
