ended the implementation for the first part of Q3 we need to encapsulate better the functions and the outputs but we're nearly there

--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,6 +1053,7 @@
     "    cum = []\n",
     "    ret = dict()\n",
     "    act_ind = actual_indexes()\n",
+    "    print(query.split(' '))\n",
     "    for word in query.split(' '):\n",
     "        if word.startswith('['):\n",
     "            k = word[1:-1]\n",
@@ -1067,41 +1068,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['goku', '[title]', 'dragon', 'pippo', 'pluto', '[synopsis]', 'vegeta', '[characters]']\n",
       "The term 'pippo' wasn't found anywhere!\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'title': [9064], 'synopsis': [20310, 19457]}"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "parse_advanced_query(\"goku [title] dragon pippo pluto [synopsis] vegeta [characters]\")"
+    "p_q = parse_advanced_query(\"goku [title] dragon pippo pluto [synopsis] vegeta [characters]\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get_results(query, inv_idx):\n",
     "def get_advanced_results(query_dict):\n",
     "    ret = dict()\n",
-    "    for k in "
+    "    act_ind = actual_indexes()\n",
+    "    for k in query_dict:\n",
+    "        inv_idx = read_dict_from_file(os.path.join(act_ind[k], 'inv_idx.json'))\n",
+    "        ret[k] = get_results(query_dict[k], inv_idx)\n",
+    "    return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'title': {777, 1558, 6376, 7510},\n",
+       " 'synopsis': {5452},\n",
+       " 'characters': {365,\n",
+       "  401,\n",
+       "  994,\n",
+       "  1035,\n",
+       "  1150,\n",
+       "  1466,\n",
+       "  1467,\n",
+       "  1558,\n",
+       "  1960,\n",
+       "  2013,\n",
+       "  2266,\n",
+       "  2292,\n",
+       "  3337,\n",
+       "  3477,\n",
+       "  4337,\n",
+       "  4413,\n",
+       "  4586,\n",
+       "  4796,\n",
+       "  5373,\n",
+       "  6339,\n",
+       "  6340,\n",
+       "  8030,\n",
+       "  10958}}"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "get_advanced_results(p_q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title                                     Super Dragon Ball Heroes\n",
+       "type                                                           ONA\n",
+       "episodes                                                      None\n",
+       "start_date                                     2018-07-01 00:00:00\n",
+       "end_date                                                      None\n",
+       "score                                                         5.27\n",
+       "users                                                        23187\n",
+       "ranked                                                       10963\n",
+       "popularity                                                    2248\n",
+       "members                                                      60080\n",
+       "synopsis         In May 2018, V-Jump announced a promotional an...\n",
+       "related_anime    ['Super Dragon Ball Heroes: Big Bang Mission!!...\n",
+       "characters       ['Son, Gokuu', 'Vegeta', 'Son, Gohan', 'Piccol...\n",
+       "voices           ['Nozawa, Masako', 'Horikawa, Ryo', 'Nozawa, M...\n",
+       "staff            [['Yamamuro, Tadayoshi', ['Director', ' Storyb...\n",
+       "Name: 10958, dtype: object"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[10958]"
    ]
   },
   {
