fixed files problems

--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -835,7 +835,7 @@
    ],
    "source": [
     "import os\n",
-    "def actual_indexes(path='../data/indexes'):\n",
+    "def actual_indexes(path='../shared_stuff/indexes'):\n",
     "    ret = dict()\n",
     "    for idx_dir in os.listdir(path):\n",
     "        if idx_dir.startswith('.'): continue\n",
@@ -995,7 +995,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx_dir = os.path.join('..', 'data', 'indexes')\n",
+    "idx_dir = os.path.join('..', 'shared_stuff', 'indexes')\n",
     "staff_dir = os.path.join(idx_dir, 'staff')\n",
     "voices_dir = os.path.join(idx_dir, 'voices')\n",
     "ch_dir = os.path.join(idx_dir, 'characters')\n",
