--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -2142,7 +2142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -2151,7 +2151,7 @@
      "text": [
       "['goku', '[title]', 'dragon', 'pippo', 'pluto', '[synopsis]', 'vegeta', '[characters]']\n",
       "The term 'pippo' wasn't found anywhere!\n",
-      "{'title': [9064], 'synopsis': [20310, 19457], 'characters': [14797]}\n",
+      "{'title': [9064], 'synopsis': [4385, 24632], 'characters': [14797]}\n",
       "dragon\n",
       "pluto\n"
      ]
@@ -2166,7 +2166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2182,7 +2182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2192,14 +2192,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "doc: 5452: Kai, who has powers different from the rest, together with his sickly sister Hikaru was protected by an organization called ASHURUM. Scouted by Eiji, Kai was delegated to the ASHURUM special force AESES and undergo intensive training. Whenever he was free, Kai visited Hikaru at the hospital belongs to the organization, but Hikaru's condition never improved. So, one year later, with amazing growth from the intensive training, Kai decides to escape from the organization.\n"
+      "doc: 5451: Twenty years prior to the story's beginning, an asteroid headed for Earth destroys Pluto. Due to Pluto's destruction, the asteroid, which is dubbed Thanatos, becomes temporarily stagnant. Now, in order to avoid Earth's impending destruction, the International Solarsystem Development Agency (ISDA) works on the \"D-Project\", and creates the \"Dragonaut\" after finding a dragon egg under the ocean. This weapon's primary purpose is to destroy the asteroid when the time comes. However, they soon find out that the asteroid is not their only threat, as powerful dragon-like creatures, which are bent on destruction, appear on Earth.\n"
      ]
     }
    ],
