fixed tsv problem

--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -268,14 +268,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 19122 entries, 0 to 19121\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column         Non-Null Count  Dtype \n",
+      "---  ------         --------------  ----- \n",
+      " 0   title          19122 non-null  object\n",
+      " 1   type           19122 non-null  object\n",
+      " 2   episodes       19122 non-null  object\n",
+      " 3   start_date     19122 non-null  object\n",
+      " 4   end_date       19122 non-null  object\n",
+      " 5   score          19122 non-null  object\n",
+      " 6   users          19122 non-null  object\n",
+      " 7   ranked         19122 non-null  object\n",
+      " 8   popularity     19122 non-null  int64 \n",
+      " 9   members        19122 non-null  int64 \n",
+      " 10  synopsis       19122 non-null  object\n",
+      " 11  related_anime  19122 non-null  object\n",
+      " 12  characters     19122 non-null  object\n",
+      " 13  voices         19122 non-null  object\n",
+      " 14  staff          19122 non-null  object\n",
+      "dtypes: int64(2), object(13)\n",
+      "memory usage: 2.2+ MB\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/alessandro/opt/anaconda3/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3437: FutureWarning: The error_bad_lines argument has been deprecated and will be removed in a future version.\n",
+      "\n",
+      "\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_table(\"../shared_stuff/tsv_files/total_pages.tsv\",\n",
+    "import csv\n",
+    "df = pd.read_table(\"../shared_stuff/tsv_files/0total_pages.tsv\",\n",
     "                       delimiter = \"\\t\",\n",
     "                       header = \"infer\",\n",
-    "                       on_bad_lines = \"skip\") # fix line 16473"
+    "                       quoting=csv.QUOTE_NONE, error_bad_lines=False)\n",
+    "df.info()"
    ]
   },
   {
